# sapi

./: Cargo.toml  README.md
src/: appstate.rs  config.rs  main.rs  socketsession.rs  web.rs
src/handler/: auth.rs  home.rs  mod.rs  notfound.rs  socket.rs  websocket.rs
src/middleware/: auth.rs
src/migration/: users.sql
