[package]
name = "sapi"
version = "0.1.1"
authors = ["Ganda Wenang Sani <wenang.sani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

# database
sqlx = { version = "0.7.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
    "rust_decimal",
    "json",
] }
chrono = { version = "0.4.26", features = ["serde"] }

# json0.4.19
rust_decimal = { version = "1.30.0", features = ["serde-float"] }
serde = "1.0.175"
serde_json = "1.0.103"
serde_derive = "1.0.175"
# json5 = "0.3.0"

# other
jsonwebtoken = "8.3.0"
uuid = { version = "1.4.1", features = ["v4"] }
